crates/kaban-parser/tests/snapshots/expressions__addition_is_left_associative.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format!(\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: 1 + 2 + 3;

Block [
    ExpressionStatement(
        Add {
            left: Add {
                left: IntLit("1"),
                right: IntLit("2"),
            },
            right: IntLit("3"),
        },
    ),
]
