crates/kaban-parser/tests/snapshots/expressions__anonymous_enum_access.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: return enum.Day;

Block [
    Return(
        MemberAccess {
            left: AnonymousEnumlit,
            right: Identifier("Day"),
        },
    ),
]
