crates/kaban-parser/tests/snapshots/expressions__anonymous_func_decl_with_explicit_types_without_braces.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x = func(x: i32, y: f64) -> i32 pass x;

Block [
    Assignment {
        left: Identifier("x"),
        right: AnonymousFuncDecl {
            params: [
                Param {
                    binding: IdentifierBinding {
                        name: Identifier("x"),
                        mutable: false,
                    },
                    type: Type(I32),
                },
                Param {
                    binding: IdentifierBinding {
                        name: Identifier("y"),
                        mutable: false,
                    },
                    type: Type(F64),
                },
            ],
            return type: Type(I32),
            block: Pass(
                Identifier("x"),
            ),
        },
    },
]
