crates/kaban-parser/tests/snapshots/expressions__anonymous_func_decl_with_implicit_types_and_braces.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x = func(x, y) { pass x; };

Block [
    Assignment {
        left: Identifier("x"),
        right: AnonymousFuncDecl {
            params: [
                Param {
                    binding: IdentifierBinding {
                        name: Identifier("x"),
                        mutable: false,
                    },
                    type: "NONE",
                },
                Param {
                    binding: IdentifierBinding {
                        name: Identifier("y"),
                        mutable: false,
                    },
                    type: "NONE",
                },
            ],
            return type: "NONE",
            block: Block [
                Pass(
                    Identifier("x"),
                ),
            ],
        },
    },
]
